Rename methods: insertIn  to insertInto and updateBy to updateWith.